# graphics_engine

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md
assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
assets/textures/: bricks.xcf
dependencies/glad/: glad.h
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: image_loader.h  main.h  shader.h
src/: bmp_loader.c  config.h  config.h~  fragment_shader.glsl  fragment_shader.glsl~  glad.c  main.c  main.cpp~  main.c~  noise.c  shader.c  shader.glsl~  vertex_shader.glsl  vertex_shader.glsl~
